--- a/style.css
+++ b/style.css
@@ -9,57 +9,13 @@ body {
   align-items: center;
 }
 
-#rooms-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
-
-.room {
-  border: 1px solid #ddd;
-  padding: 20px;
-  width: 200px;
-  text-align: left;
-}
-
-nav {
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 10px;
-}
-
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-}
-
-nav ul li {
-  margin: 0 15px;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: rgb(206, 203, 203);
-  font-weight: bold;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, sans-serif;
-}
-
 nav {
   display: flex;
-  align-items: right;
-  background-color: #333;
+  align-items: left;
+  background-color: #0a0a0a;
   padding: 10px;
+  width: auto;
+  height: 50px;
 }
 .navbar-logo img {
   height: 40px;
@@ -84,9 +40,9 @@ nav a:hover {
 
 nav {
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: space-between;
-  background-color: #333;
+  background-color: #f3f3f3;
   padding: 10px 20px;
 }
 .navbar-logo img {
@@ -109,7 +65,20 @@ nav a {
 }
 
 nav a:hover {
-  background-color: #555;
+  background-color: #f5f0f0;
+}
+#rooms-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.room {
+  border: 1px solid #ddd;
+  padding: 20px;
+  width: 200px;
+  text-align: left;
 }
 
 .booking-form,
